# OgreGame

./: .clang-format  .gitignore  CMakeLists.txt  static_CMakeLists.txt
src/: deleted_parts.txt  firing_component.cc  firing_component.hpp  fps_game.cc  fps_game.hpp  fps_game_gui.cc  fps_game_gui.hpp  frames_per_second.hpp  game_setup_component.hpp  helper_code.hpp  main.cc  main.cpp  obstacle_system.cc  obstacle_system.hpp  simple_random_generator.cc  simple_random_generator.hpp
